--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next-sanity": "^11.1.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "resend": "^6.3.0",
     "sanity": "^4.9.0"
   },
   "devDependencies": {
